made every image a clickable link for those viewing on mobile can navigate better

--- a/flyers.html
+++ b/flyers.html
@@ -98,7 +98,8 @@
 <!--MOCKUPS-->
 	<div class="column">
 		<div class="content">
-			<img class="pro" src="mockup.png" alt="mockup">
+			<a href="mockups.html">
+			<img class="pro" src="mockup.png" alt="mockup"></a>
 			<center><a class="label" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
@@ -106,7 +107,8 @@
 <!--PROTOTYPES-->
 	<div class="column">
 		<div class="content">
-			<img class="pro" src="mockup.png" alt="mockup">
+			<a href = "prototypes.html">
+			<img class="pro" src="mockup.png" alt="mockup"></a>
 			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
 		</div>
 	</div>
