--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<img  class="icon" src="linkinprofile.jpg" alt="me" >
+			<a href="aboutme.html"><img  class="icon" src="linkinprofile.jpg" alt="me" ></a>
 			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a></center>
 			<p></p>
 		</div>
@@ -49,7 +49,7 @@
   
 	<div class="column">
 		<div class="content">
-			<img class="icon" src="resume.png" alt="resume">
+			<a href="Chyna Grant-Williams Resume 2020.pdf"><img class="icon" src="resume.png" alt="resume"></a>
 			<center><a class= "label" href="Chyna Grant-Williams Resume 2020.pdf"><h3>My Resume</h3></a></center>
 			<p></p>
 		</div>
@@ -57,7 +57,7 @@
 	
 	<div class="column">
 		<div class="content">
-			<img class="icon" src="harri.jpg" alt="harriet">
+			<a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><img class="icon" src="harri.jpg" alt="harriet"></a>
 			<center><a class= "label" href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><h3>Harriet Tubman 2.0</h3></a></center>
 			<p></p>
 		</div>
@@ -65,7 +65,7 @@
 	
 	<div class="column"> 
 		<div class="content">
-			<img class="icon" src="porfolio.png" alt="porfolio">
+			<a href="portfolio.html"><img class="icon" src="porfolio.png" alt="porfolio"></a>
 			<center><a class= "label" href="portfolio.html"><h3>My Portfolio</h3></a></center>
 			<p></p>
 		</div>
