--- a/mockups.html
+++ b/mockups.html
@@ -97,14 +97,16 @@
 <!--PROTOTYPES-->
 	<div class="column">
 		<div class="content">
-			<img class="pro" src="mockup.png" alt="mockup">
+			<a href="prototypes.html">
+			<img class="pro" src="mockup.png" alt="mockup"></a>
 			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
 		</div>
 	</div>
 <!--FLYERS-->
 	<div class="column">
 		<div class ="content">
-			<img class="pro" src="flyer.png" alt="flyer">
+			<a href="flyers.html">
+			<img class="pro" src="flyer.png" alt="flyer"></a>
 			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
 		</div>
 	</div>
