--- a/portfolio.html
+++ b/portfolio.html
@@ -59,14 +59,16 @@
 <div class="row">
 	<div class="column">
 		<div class="content">
-			<img class="profile" src="mockup.png" alt="mockup">
+			<a href="mockups.html">
+			<img class="profile" src="mockup.png" alt="mockup"></a>
 			<center><a class= "label" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
 		</div>
 	</div>
 	
 	<div class="column">
 		<div class="content">
-			<img class="profile" src="flyer.png" alt="flyer">
+			<a href="flyers.html">
+			<img class="profile" src="flyer.png" alt="flyer"></a>
 			<center><a class= "label" href="flyers.html"><h5>Online Flyers</h5></a></center>
 		</div>
 	</div>	
