--- a/prototypes.html
+++ b/prototypes.html
@@ -42,7 +42,7 @@
 	<!-- PRECISION-->
 	<div class="column"> 
 		<div class="content">
-		<a href="https://invis.io/QXT6VLZACZU">
+			<a href="https://invis.io/QXT6VLZACZU">
 			<img class="pro" href="https://invis.io/QXT6VLZACZU" src="mockups/Precision by OrderlyCompany/2.png" alt="POC"></a>
 			<center><p class="b">(Click on Image to Expierence Precision)</p></center>
 		</div>
@@ -60,7 +60,8 @@
 	<!--MOCKUPS DIV-->
 	<div class="column">
 		<div class="content">
-			<img class="icon" src="mockup.png" alt="mockup" style="width:100%">
+			<a href="mockups.html">
+			<img class="icon" src="mockup.png" alt="mockup" style="width:100%"></a>
 			<center><a class="label" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
@@ -68,7 +69,8 @@
 	<!--FLYERS-->
 	<div class="column">
 		<div class ="content">
-			<img class="icon" src="flyer.png" alt="flyer" style="width:100%">
+			<a href="flyers.html">
+			<img class="icon" src="flyer.png" alt="flyer" style="width:100%"></a>
 			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
 		</div>
 	</div>
