added image enlargening instructions

--- a/mockups.html
+++ b/mockups.html
@@ -46,6 +46,7 @@
 		<div class="content">
 			<img class="flyer" id="hare" src="mockups/HarePackage.jpg" alt="Hare">
 			<center><p class="b">A mockup design of a desktop display of an e-commerece business.</p></center>
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
 		</div>
 	</div>  
 <!--HARE PACKAGE ENLARGEN-->	
@@ -63,7 +64,8 @@
 		<div class="content"> 
 			<img class="flyer" id="flix" src="mockups/Flixer.jpg" alt="flix">
 			<center><p class ="b">A mockup design of a tablet display of netflix-like streaming platflorm.</p></center>
-		</div>
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
+</div>
 	</div>
 <!--FLIX ENLARGEN-->	
 <div id="myModal1" class="modal">
@@ -80,6 +82,7 @@
 		<div class="content">
 			<img class="flyer" id="fum" src="mockups/Fumbl.jpg" alt="fumbl">
 			<center><p class="b">A mockup design of a mobile display of a social media platform.</p></center>
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
 		</div>
 	</div> 
 <!--FUMBL ENLARGEN-->	
