added image enlargening instructions

--- a/flyers.html
+++ b/flyers.html
@@ -44,6 +44,7 @@
 	<div class="column"> 
 		<div class="content">
 			<img class="flyer" id="f1" src="flyers/1.png" alt="f1">
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
 		</div>
 	</div>
 <!--FLYER #1 ENLARGEN-->
@@ -55,7 +56,8 @@
 <!--FLYER #2-->	
 	<div class="column">
 		<div class="content">
-			<img class="flyer" id="f2" src="flyers/3.png" alt="f2"> 
+			<img class="flyer" id="f2" src="flyers/3.png" alt="f2">
+			<center><p class="enlarge">(click on image to enlargen)</p></center>			
 		</div>
 	</div>
 <!--FLYER #2 ENLARGEN-->
@@ -67,7 +69,8 @@
 <!--FLYER #3-->
 	<div class="column">
 		<div class="content">
-			<img class="flyer" id="f3" src="flyers/5.png" alt="f3">	
+			<img class="flyer" id="f3" src="flyers/5.png" alt="f3">
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
 		</div>
 	</div>
 <!--FLYER #3 ENLARGEN-->
@@ -80,6 +83,7 @@
 	<div class="column">
 		<div class="content">
 			<img class="flyer" id="f4" src="flyers/7.png" alt="f3">
+			<center><p class="enlarge">(click on image to enlargen)</p></center>
 		</div>
 	</div>
 <!--FLYER #4 ENLARGEN-->
