edit image instructions

--- a/prototypes.html
+++ b/prototypes.html
@@ -44,7 +44,7 @@
 		<div class="content">
 			<a href="https://invis.io/QXT6VLZACZU">
 			<img class="pro" href="https://invis.io/QXT6VLZACZU" src="mockups/Precision by OrderlyCompany/2.png" alt="POC"></a>
-			<center><p class="b">(Click on Image to Expierence Precision)</p></center>
+			<center><p class="enlarge">(Click on Image to Expierence Precision)</p></center>
 		</div>
 	</div>
 	
@@ -53,7 +53,7 @@
 		<div class="content">
 			<a href="https://invis.io/GMXX20X9UP8">
 			<img class="pro" src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN"></a>
-			<center><p class="b">(Click on Image to Expierence Aligned)</p></center>
+			<center><p class="enlarge">(Click on Image to Expierence Aligned)</p></center>
 		</div>
 	</div>
 
