grammar error fixed

--- a/mockups.html
+++ b/mockups.html
@@ -63,7 +63,7 @@
 	<div class="column">
 		<div class="content"> 
 			<img class="flyer" id="flix" src="mockups/Flixer.jpg" alt="flix">
-			<center><p class ="b">A mockup design of a tablet display of a netflix-like streaming platflorm.</p></center>
+			<center><p class ="b">A mockup design of a tablet display of a netflix-like streaming platform.</p></center>
 			<center><p class="enlarge">(click on image to enlargen)</p></center>
 </div>
 	</div>
