--- a/aboutme.html
+++ b/aboutme.html
@@ -60,9 +60,9 @@
 <div class="content">
 	<h3>Additional Info</h3>
 		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com<p></a>
-		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn</p></a>
-		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github</p></a>
-		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
+		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="blank"><p>LinkedIn</p></a>
+		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="blank"><p>Github</p></a>
+		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y" target="_blank"><p>Twitter</p></a>
 </div>
 
 </div><!--END OF MENU DIV-->
