--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 
 <div class="content">
 	<h3>Checkout My Commit History</h3>
-	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
+	<a class= "link" href="https://github.com/ChynaGrant-Williams" target="blank"><p>Github Account</p></a>
 </div>
 
 </div><!--END OF MENU DIV-->
