added comments and checked div closure and corrected link target

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,8 @@
 		<span></span>
 	</label>
 	</div>
+	
+<!--SIDE MENU-->
 	<div class="menu-pane">
 	<nav>
 		<ul class="menu-links">
@@ -30,14 +32,17 @@
 	</nav>
 	</div>
 
+<!-- MAIN DIV(center website) -->
 <div class="main">
 
 <h1><center><a class="home" href= "index.html">CeeGeeDub.com</a></center></h1>
 <hr>
 
+<!--HEADER-->
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
 
+<!--FEATURED PAGE-->
 <div class="row">
 	<div class="column"> 
 		<div class="content">
@@ -77,11 +82,18 @@
 
 <div class="content">
 	<h3>Checkout My Commit History</h3>
-	<a class= "link" href="https://github.com/ChynaGrant-Williams" target="blank"><p>Github Account</p></a>
+	<a class= "link" href="https://github.com/ChynaGrant-Williams" target="_blank"><p>Github Account</p></a>
 </div>
 
 </div><!--END OF MAIN DIV-->
 </div><!--END OF MENU DIV-->
+
+</DIV><!--THE "REAL" MAIN-->
+</DIV><!--THE "REAL" MENU-->
+
+<!--I PUT AIR QUOTES AROUND REAL BECAUSE THE ROAD 
+MAP SUPPORTS THOSE DIVS AND AND NOT THE ACTUAL CODED DIVS 
+FOR SOME REASON-->
 
 </body>
 </html>
