--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<!--SIDE MENU-->
 <div class="menu-container">
 <input type="checkbox" id="openmenu" class="hamburger-checkbox">
 	<div class="hamburger-icon">
@@ -28,24 +29,28 @@
 	</nav>
 	</div>
 
-<!-- MAIN (Center website) -->
+<!-- MAIN DIV(center website) -->
 <div class="main">
 
 <h1><center><a class="title">CeeGeeDub.com</a></center></h1>
 <hr>
 
-
+<!--HEADER-->
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
+
+<!--MAIN MENU-->
+
 
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<a href="aboutme.html"><img  class="icon" src="linkinprofile.jpg" alt="me" ></a>
-			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a></center>
-			<p></p>
-		</div>
-	</div>
+			<a href="aboutme.html"><img class="icon" src="linkinprofile.jpg" alt="me" ></a>
+			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a>
+			</center>
+			
+		</div> <!--center-->
+	</div> <!--center-->
   
 	<div class="column">
 		<div class="content">
@@ -71,18 +76,27 @@
 		</div>
 	</div>
 	
-</div><!--END OF ROW DIV--->
+</div><!--END OF "ROW" DIV-------content-->
 
+<!--ADDITIONAL INFO-->
 <div class="content">
 	<h3>Additional Info</h3>
-		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com<p></a>
-		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="blank"><p>LinkedIn</p></a>
-		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="blank"><p>Github</p></a>
-		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y" target="blank"><p>Twitter</p></a>
+		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com</p></a>
+		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="_blank"><p>LinkedIn</p></a>
+		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="_blank"><p>Github</p></a>
+		<p>Follow me on</p><a class= "link" href="https://twitter.com/china_witha_y" target="_blank"><p>Twitter</p></a>
 </div>
 
-</div><!--END OF MENU DIV-->
-</div><!--END OF MAIN DIV-->
+</div><!--END OF MENU DIV--column-->
+</div><!--END OF MAIN DIV--row-->
+
+</DIV><!--THE "REAL" MAIN-->
+</DIV><!--THE "REAL" MENU-->
+
+<!--I PUT AIR QUOTES AROUND REAL BECAUSE THE ROAD 
+MAP SUPPORTS THOSE DIVS AND AND NOT THE ACTUAL CODED DIVS 
+FOR SOME REASON-->
+
 
 </body>
 </html>
