--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
 
 <body>
 
+<!--SIDE MENU-->
 <div class="menu-container">
 <input type="checkbox" id="openmenu" class="hamburger-checkbox">
 	<div class="hamburger-icon">
@@ -30,20 +31,22 @@
 	</nav>
 	</div>
 
+<!-- MAIN DIV(center website) -->
 <div class="main">
 
 <h1><center><a class="home"  href= "index.html">CeeGeeDub.com</a></center></h1>
 <hr>
 
+<!--HEADER-->
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
 
+<!--FEATURED PAGE-->
 <div class="row">
 	<div class="column">
-		<!--<div class="content">-->
 			<img class="profile" src="linkinprofile.jpg" alt="me">
-		<!--</div>-->
 	</div>
+	
 	<div class="column">
 		<div class="content">
 			<p class ="b"> Hi! My name is Chyna Grant-Williams and I'm a Spring 2020 graduate of The University at Albany, New York, having earned a <b>B.A. in Informatics with a concentration in IUX.</b></p>
@@ -54,19 +57,20 @@
 			
 			<p class="b">You can keep up with my progress by accessing my <a class= "link" href="https://github.com/ChynaGrant-Williams">Github </a>account, <a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/">Linkedin </a>profile, as well as my <a class= "link" href="https://twitter.com/china_witha_y">Twitter</a>. Enjoy!</p>
 		</div>
-	</div>
+	</div>column
 </div><!--END OF ROW DIV--->
 
+<!--ADITIONAL INFO-->
 <div class="content">
-	<h3>Additional Info</h3>
-		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com<p></a>
-		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="blank"><p>LinkedIn</p></a>
-		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="blank"><p>Github</p></a>
-		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y" target="_blank"><p>Twitter</p></a>
+		<h3>Additional Info</h3>
+		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com</p></a>
+		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="_blank"><p>LinkedIn</p></a>
+		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="_blank"><p>Github</p></a>
+		<p>Follow me on </p><a class= "link" href="https://twitter.com/china_witha_y" target="_blank"><p>Twitter</p></a>
 </div>
 
-</div><!--END OF MENU DIV-->
-</div><!--END OF MAIN DIV-->
+</div><!--END OF MAIN DIV--> 
+</div><!--END OF MENU DIV--> 
 
 </body>
 </html>
