added comments and checked div closure and corrected link target

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,7 @@
 </div> <!--END OF ROW DIV-->
 
 
+<!--ADDITIONAL INFO-->
 <div class="content">
 	<h3>Checkout My Commit History</h3>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams" target="_blank"><p>Github Account</p></a>
