--- a/flyers.html
+++ b/flyers.html
@@ -3,7 +3,13 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="stylesheet3.css" />
-<title> Portfolio </title>
+
+<link rel="icon" sizes="180x180" href="favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+<link rel="manifest" href="https://ceegeedub.com"> 
+
+<title> Flyers </title>
 </head>
 
 <body>
