--- a/mockups.html
+++ b/mockups.html
@@ -4,6 +4,14 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="stylesheet3.css">
+
+<link rel="icon" sizes="180x180" href="favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+<link rel="manifest" href="https://ceegeedub.com">
+
+<title> Mockups </title>
+
 </head>
 
 <body>
