--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,12 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="stylesheet2.css" />
+
+<link rel="icon" sizes="180x180" href="favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+<link rel="manifest" href="https://ceegeedub.com">
+
 <title> Portfolio </title>
 </head>
 
