--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
 <!-- MAIN DIV(center website) -->
 <div class="main">
 
-<h1><center><a class="title">CeeGeeDub.com</a></center></h1>
+
+<!--<div class="typing">
+<h1><center><a class="title">CeeGeeDub.com</a></center></h1>-->
+
+<div class="typer-trick">
+    <div class="title">
+		<h1>CeeGeeDub.com</h1>
+		</div>
+</div>
 <hr>
 
 <!--HEADER-->
