--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <div class="main">
 
 
-<!--<div class="typing">
-<h1><center><a class="title">CeeGeeDub.com</a></center></h1>-->
+<!--<div class="typing">-->
+<h1><center><a class="title">CeeGeeDub.com</a></center></h1>
 
-<div class="typer-trick">
+<!--<div class="typer-trick">
     <div class="title">
 		<h1>CeeGeeDub.com</h1>
 		</div>
-</div>
+</div>-->
 <hr>
 
 <!--HEADER-->
