made new index.html file and made old one homepage.html changes links and attributes accordingly

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
 	<div class="menu-pane">
 	<nav>
 		<ul class="menu-links">
-			<li><a href="index.html">Home</a><span id="web-links"></span></li>
+			<li><a href="homepage.html">Home</a><span id="web-links"></span></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume (pdf file)</a></li>
 			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
@@ -42,7 +42,7 @@
 <!-- MAIN DIV(center website) -->
 <div class="main">
 
-<h1><center><a class="home"  href= "index.html">CeeGeeDub.com</a></center></h1>
+<h1><center><a class="home"  href= "homepage.html">CeeGeeDub.com</a></center></h1>
 <hr>
 
 <!--HEADER-->
