--- a/flyers.html
+++ b/flyers.html
@@ -27,7 +27,7 @@
 	<div class="menu-pane">
 	<nav>
 		<ul class="menu-links">
-			<li><a href="index.html">Home</a><span id="web-links"></span></li>
+			<li><a href="homepage.html">Home</a><span id="web-links"></span></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume (pdf file)</a></li>
 			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
@@ -38,7 +38,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" href= "index.html">CeeGeeDub.com</a></center></h1>
+<h1><center><a class="home" href= "homepage.html">CeeGeeDub.com</a></center></h1>
 <hr>
 
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
