--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="menu-pane">
 	<nav>
 		<ul class="menu-links">
-			<li><a href="index.html">Home</a><span id="web-links"></span></li>
+			<li><a href="homepage.html">Home</a><span id="web-links"></span></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume (pdf file)</a></li>
 			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
@@ -38,78 +38,16 @@
 <div class="main">
 
 
-<!--<div class="typing">-->
-<h1><center><a class="title">CeeGeeDub.com</a></center></h1>
+<!--<div class="typing">
+<h1><center><a class="title">CeeGeeDub.com</a></center></h1>-->
 
-<!--<div class="typer-trick">
+<div class="typer-trick">
     <div class="title">
-		<h1>CeeGeeDub.com</h1>
+		<h1><a class="gohome" href="homepage.html">CeeGeeDub.com</a></h1>
 		</div>
-</div>-->
+</div>
 <hr>
 
 <!--HEADER-->
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
-
-<!--MAIN MENU-->
-
-
-<div class="row">
-	<div class="column">
-		<div class="content"> 
-			<a href="aboutme.html"><img class="icon" src="linkinprofile.jpg" alt="me" ></a>
-			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a>
-			</center>
-			
-		</div> <!--center-->
-	</div> <!--center-->
-  
-	<div class="column">
-		<div class="content">
-			<a href="Chyna Grant-Williams Resume 2020.pdf"><img class="icon" src="resume.png" alt="resume"></a>
-			<center><a class= "label" href="Chyna Grant-Williams Resume 2020.pdf"><h3>My Resume</h3></a></center>
-			<p></p>
-		</div>
-	</div>  
-	
-	<div class="column">
-		<div class="content">
-			<a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><img class="icon" src="harri.jpg" alt="harriet"></a>
-			<center><a class= "label" href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><h3>Harriet Tubman 2.0</h3></a></center>
-			<p></p>
-		</div>
-	</div>  
-	
-	<div class="column"> 
-		<div class="content">
-			<a href="portfolio.html"><img class="icon" src="porfolio.png" alt="porfolio"></a>
-			<center><a class= "label" href="portfolio.html"><h3>My Portfolio</h3></a></center>
-			<p></p>
-		</div>
-	</div>
-	
-</div><!--END OF "ROW" DIV-------content-->
-
-<!--ADDITIONAL INFO-->
-<div class="content">
-	<h3>Additional Info</h3>
-		<p>Email me at </p><a class= "link" href="mailto:chynagrantwllms@gmail.com"><p>ChynaGrantWllms@gmail.com</p></a>
-		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/" target="_blank"><p>LinkedIn</p></a>
-		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams" target="_blank"><p>Github</p></a>
-		<p>Follow me on</p><a class= "link" href="https://twitter.com/china_witha_y" target="_blank"><p>Twitter</p></a>
-</div>
-
-</div><!--END OF MENU DIV--column-->
-</div><!--END OF MAIN DIV--row-->
-
-</DIV><!--THE "REAL" MAIN-->
-</DIV><!--THE "REAL" MENU-->
-
-<!--I PUT AIR QUOTES AROUND REAL BECAUSE THE ROAD 
-MAP SUPPORTS THOSE DIVS AND AND NOT THE ACTUAL CODED DIVS 
-FOR SOME REASON-->
-
-
-</body>
-</html>
