made new index.html file and made old one homepage.html changes links and attributes accordingly

--- a/aboutme.html
+++ b/aboutme.html
@@ -65,7 +65,7 @@
 			
 			<p class="b">You can keep up with my progress by accessing my <a class= "link" href="https://github.com/ChynaGrant-Williams">Github </a>account, <a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/">Linkedin </a>profile, as well as my <a class= "link" href="https://twitter.com/china_witha_y">Twitter</a>. Enjoy!</p>
 		</div>
-	</div>column
+	</div>
 </div><!--END OF ROW DIV--->
 
 <!--ADITIONAL INFO-->
