closed body and html tag

--- a/index.html
+++ b/index.html
@@ -47,3 +47,6 @@
 <!--HEADER-->
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
+
+</body>
+</html>
