Fixed some information in the body text

--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
 	
 	<div class="column">
 		<div class="content">
-			<p class ="b"> Hi! My name is Chyna Grant-Williams and I'm a Spring 2020 graduate of The University at Albany, New York, having earned a <b>B.A. in Informatics with a concentration in IUX.</b></p>
+			<p class ="b"> Hi! My name is Chyna Grant-Williams and I'm a Spring 2020 graduate of The University at Albany, New York, having earned a <b>B.S. in Informatics with a concentration in IUX.</b></p>
 
 			<p class="b">Currently based in New York City and working to establish a career as a <b>front-end web developer, specializing in user-experience design (IUX/UX),</b> this website showcases not only my web developing skills but also finished projects I have completed during my undergrad studies and free time.</p>
 			
