updated resume file

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
 		<ul class="menu-links">
 			<li><a href="homepage.html">Home</a><span id="web-links"></span></li>
 			<li><a href="aboutme.html">About Me</a></li>
-			<li><a href="Chyna Grant-Williams Resume 2021.pdf">Resume (pdf file)</a></li>
+			<li><a href="CGrant-Williams Resume2022.pdf">Resume (pdf file)</a></li>
 			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
 			<li><a href="portfolio.html">Portfolio</a></li>
 		</ul>
