--- a/homepage.html
+++ b/homepage.html
@@ -62,8 +62,8 @@
   
 	<div class="column">
 		<div class="content">
-			<a href="Chyna Grant-Williams Resume 2021.pdf"><img class="icon" src="resume.png" alt="resume"></a>
-			<center><a class= "label" href="Chyna Grant-Williams Resume 2021.pdf"><h3>My Resume</h3></a></center>
+			<a href="CGrant-Williams Resume2022.pdf"><img class="icon" src="resume.png" alt="resume"></a>
+			<center><a class= "label" href="CGrant-Williams Resume2022.pdf"><h3>My Resume</h3></a></center>
 			<p></p>
 		</div>
 	</div>  
